--- a/.gitignore
+++ b/.gitignore
@@ -25,10 +25,19 @@
 # virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
 hs_err_pid*
 
-.classpath
-.factorypath
-.project
 
 bin/*
 target/*
 .settings/*
+
+# STS and Maven
+.settings/
+.bin/
+.target/
+
+.classpath
+.factorypath
+.project
+
+# Intellij
+.idea/
